--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ matplotlib>=3.2.2,<3.4.0
 pandas>=0.25.3,<0.26.0
 scikit-learn>=0.18.1
 scipy>=1.4.1
-numpy>=1.23.5
+numpy==1.23.5
 seaborn>=0.8
 tensorflow==2.10.0
 wheel>=0.30.0a0
